# autonomous-software-factory

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  package.json  pnpm-lock.yaml  prompts.md  turbo.json
.gemini/: settings.json
.github/workflows/: pulse.yml
.husky/: pre-commit
.system/agents/: 01-architect.md  02-frontend.md  03-backend.md  04-database.md  05-surgeon.md  06-detective.md  07-inquisitor.md  08-devops.md  09-merge.md  agents.md  antigravity.md
.system/architecture/: ARCHITECTURE.md  ARCHITECT_BRIEF.md  PULSE_CHECK.md  architecture.md
.system/core/: BEHAVIOR.md  CONSTITUTION.md
.system/design/: APP_STRUCTURE.md  UI_UX_RULES.md  app_structure.md  design_rules.md
.system/prompts/: prompt.md
.system/scripts/: audit-state.js  safe-commit.sh
.system/state/: ERROR_REGISTRY.md  GLOBAL_TASKS.md  MEMEX.md  STATE.md  TASKS.md  TASKS_ARCHIVED.md
.system/summary/: ULTIMATE_DOCUMENTATION.md
.system/workflows/: COMPRESS_MEMORY.md  HANDOVER.md  INITIALIZATION.md  MERGE_RESOLUTION.md  PLANNING.md  RESUME.md  RUN_CORE_LOGIC.md  RUN_INTEGRATION.md  RUN_PROTOTYPE.md  SOLO_BUILDER.md  TEAM_MODE.md  WORKFLOWS.md
apps/api/: package.json  pyproject.toml
apps/api/src/api/: deps.py  main.py
apps/api/tests/: test_main.py
apps/desktop/: check.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web-client/.domain/: LOCAL_ERRORS.md  (+1 more)
(+16 files in other folders)
