[project]
name = "factory-sidecar"
version = "1.0.0"
description = "Polyglot Compute Engine - High-grade professional agency sidecar."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "markdown2>=2.5.4",
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.65.0",
    "aiosqlite>=0.22.1",
    "sqlalchemy>=2.0.46",
    "google-generativeai>=0.8.6",
    "loguru>=0.7.3",
    "python-multipart>=0.0.22",
    "greenlet>=3.3.2",
]

[project.scripts]
start = "src.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
